--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ac478">  <td>21/10/03 21:52:01</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;tests.afterTest()[pri:0, instance:generalPakage.tests@3f2ef586]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1562764987</td>   <td></td> </tr>
-<tr bgcolor="8ac478">  <td>21/10/03 21:51:55</td>   <td>-6373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.Buy3atSame()[pri:30, instance:generalPakage.tests@3f2ef586]">Buy3atSame</td> 
-  <td>main@1562764987</td>   <td></td> </tr>
-<tr bgcolor="8ac478">  <td>21/10/03 21:51:55</td>   <td>-6386</td> <td>&nbsp;</td><td title="&gt;&gt;tests.beforeTest()[pri:0, instance:generalPakage.tests@3f2ef586]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1562764987</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 02:44:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.LogIn()[pri:20, instance:generalPakage.tests@76c7beb3]">LogIn</td> 
+  <td>main@1627883152</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 02:44:53</td>   <td>-3072</td> <td>&nbsp;</td><td title="&gt;&gt;tests.beforeTest()[pri:0, instance:generalPakage.tests@76c7beb3]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627883152</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 02:44:59</td>   <td>3273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.Buy3atSame()[pri:30, instance:generalPakage.tests@76c7beb3]">Buy3atSame</td> 
+  <td>main@1627883152</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 02:45:03</td>   <td>7266</td> <td>&nbsp;</td><td title="&lt;&lt;tests.afterTest()[pri:0, instance:generalPakage.tests@76c7beb3]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627883152</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 02:44:53</td>   <td>-3048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.SignUp()[pri:10, instance:generalPakage.tests@76c7beb3]">SignUp</td> 
+  <td>main@1627883152</td>   <td></td> </tr>
 </table>
