--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\francisco.mendoza\AppData\Local\Temp\testng-eclipse--1988650110\testng-customsuite.xml</span>
+                    <span>C:\Users\luisf.diaz\AppData\Local\Temp\testng-eclipse-1012263858\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,29 +104,10 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="generalPakage.tests" class="method navigator-link" hash-for-method="SignUp">SignUp</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="generalPakage.tests" class="method navigator-link" hash-for-method="Buy3DiferentNoLogin">Buy3DiferentNoLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="generalPakage.tests" class="method navigator-link" hash-for-method="Buy3atSame">Buy3atSame</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="generalPakage.tests" class="method navigator-link" hash-for-method="LogIn">LogIn</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -146,17 +127,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="SignUp">
-                  </a> <!-- SignUp -->
-                  <span class="method-name">SignUp</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [Sign up successful.] but found [This user already exist.]
+                  <a name="Buy3DiferentNoLogin">
+                  </a> <!-- Buy3DiferentNoLogin -->
+                  <span class="method-name">Buy3DiferentNoLogin</span>
+                  <div class="stack-trace">java.lang.AssertionError: did not expect [Thank you for your purchase!] but found [Thank you for your purchase!]
 	at org.testng.Assert.fail(Assert.java:99)
-	at org.testng.Assert.failNotEquals(Assert.java:1037)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
-	at org.testng.Assert.assertEquals(Assert.java:122)
-	at org.testng.Assert.assertEquals(Assert.java:629)
-	at org.testng.Assert.assertEquals(Assert.java:639)
-	at generalPakage.tests.SignUp(tests.java:31)
+	at org.testng.Assert.failEquals(Assert.java:1041)
+	at org.testng.Assert.assertNotEqualsImpl(Assert.java:147)
+	at org.testng.Assert.assertNotEquals(Assert.java:1531)
+	at org.testng.Assert.assertNotEquals(Assert.java:1535)
+	at generalPakage.tests.Buy3DiferentNoLogin(tests.java:72)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -191,32 +171,10 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">generalPakage.tests</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Buy3atSame">
-                  </a> <!-- Buy3atSame -->
-                  <span class="method-name">Buy3atSame</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="LogIn">
-                  </a> <!-- LogIn -->
-                  <span class="method-name">LogIn</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\francisco.mendoza\AppData\Local\Temp\testng-eclipse--1988650110\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\luisf.diaz\AppData\Local\Temp\testng-eclipse-1012263858\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -265,24 +223,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Buy3atSame')
+data.setCell(0, 1, 'Buy3DiferentNoLogin')
 data.setCell(0, 2, 'generalPakage.tests')
-data.setCell(0, 3, 3991);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LogIn')
-data.setCell(1, 2, 'generalPakage.tests')
-data.setCell(1, 3, 3270);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'SignUp')
-data.setCell(2, 2, 'generalPakage.tests')
-data.setCell(2, 3, 3038);
+data.setCell(0, 3, 8783);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -316,20 +266,12 @@ return data;
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">SignUp</span>
-                <span class="method-start">27 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">LogIn</span>
-                <span class="method-start">3075 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Buy3atSame</span>
-                <span class="method-start">6348 ms</span>
+                <span class="method-name">Buy3DiferentNoLogin</span>
+                <span class="method-start">22 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">10341 ms</span>
+                <span class="method-start">8816 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
