Agregados comentarios y se quitaron los datos harcodeados

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,26 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>SignUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Buy3AtSameNoLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Buy3atSame</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>LogIn</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Buy3DiferentWithLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>Buy3DiferentNoLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
