--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ac478">  <td>21/10/04 10:33:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.Buy3DiferentNoLogin()[pri:50, instance:generalPakage.tests@3f2ef586]">Buy3DiferentNoLogin</td> 
-  <td>main@1562764987</td>   <td></td> </tr>
-<tr bgcolor="8ac478">  <td>21/10/04 10:34:04</td>   <td>8796</td> <td>&nbsp;</td><td title="&lt;&lt;tests.afterTest()[pri:0, instance:generalPakage.tests@3f2ef586]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1562764987</td>   <td></td> </tr>
-<tr bgcolor="8ac478">  <td>21/10/04 10:33:55</td>   <td>-17</td> <td>&nbsp;</td><td title="&gt;&gt;tests.beforeTest()[pri:0, instance:generalPakage.tests@3f2ef586]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1562764987</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.Buy3AtSameNoLogin()[pri:60, instance:generalPakage.tests@78aea4b9]">Buy3AtSameNoLogin</td> 
+  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:20</td>   <td>-5077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.Buy3DiferentNoLogin()[pri:50, instance:generalPakage.tests@78aea4b9]">Buy3DiferentNoLogin</td> 
+  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:14</td>   <td>-11034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.Buy3DiferentWithLogin()[pri:40, instance:generalPakage.tests@78aea4b9]">Buy3DiferentWithLogin</td> 
+  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:09</td>   <td>-16313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.Buy3atSame()[pri:30, instance:generalPakage.tests@78aea4b9]">Buy3atSame</td> 
+  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:06</td>   <td>-19384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.LogIn()[pri:20, instance:generalPakage.tests@78aea4b9]">LogIn</td> 
+  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:02</td>   <td>-23673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tests.SignUp()[pri:10, instance:generalPakage.tests@78aea4b9]">SignUp</td> 
+  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:29</td>   <td>3906</td> <td title="&lt;&lt;tests.afterSuite()[pri:0, instance:generalPakage.tests@78aea4b9]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:29</td>   <td>3872</td> <td>&nbsp;</td><td title="&lt;&lt;tests.afterTest()[pri:0, instance:generalPakage.tests@78aea4b9]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@796553753</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>21/10/04 15:36:02</td>   <td>-23689</td> <td>&nbsp;</td><td title="&gt;&gt;tests.beforeTest()[pri:0, instance:generalPakage.tests@78aea4b9]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@796553753</td>   <td></td> </tr>
 </table>
